--- a/app/index.html
+++ b/app/index.html
@@ -560,9 +560,9 @@
                        <div class="principle-of-work__text">
                         <p>
                             Санитарно-пропускная система «СанПро» представляет собой легкосборную конструкцию (со стенками, потолком) для дезинфекции потока людей в помещениях или на улице, оборудованную: 16 форсунками трёх типов, расположенных на четырёх уровнях; 4 датчика движения, по 2 с каждой стороны, исключающие ложные срабатывания; светодиодные ленты с обеих сторон, оповещающие разными цветами о готовности кабины к работе, необходимости подождать пока, ранее подошедший с любой из сторон, человек пройдёт через кабину, либо необходимости заправить бак; автоматикой и насосом высокого давления; поддоном с двумя типами впитывающих покрытий; отдельным закрытым контейнером под оборудование и 30-литровый бак на 600 проходов; раствором для 20 000 проходов.
-                            <div class="principle-of-work__show-more">
+                            <span class="principle-of-work__show-more">
                                 читать все
-                            </div>
+                            </span>
                         </p>
                        </div>
                     </div>
@@ -802,9 +802,9 @@
         <!--start reviews-->
         <section class="reviews">
             <div class="container">
-                <div class="section-title section-title--center">
+                <h2 class="section-title section-title--center">
                     Отзывы о «СанПро»
-                </div>
+                </h2>
                 <div class="reviews__slider">
                     <div class="swiper-container">
                         <div class="swiper-wrapper">
