--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
                         разработки»
                     </p>
                 </a>
-                <a href="#" class="button header__button button--transparent">заказать</a>
+                <a class="button call-button header__button button--transparent">заказать</a>
                 <a href="mailto:sale@npo-eir.ru" class="header__link">sale@npo-eir.ru</a>
                 <div class="header__phone phone">
                     <a href="tel:999940114" class="phone__link">(499) 994-01-14</a>
@@ -63,7 +63,7 @@
                         Государственной Думы РФ
                        </p>
                    </div>
-                   <a href="" class="hero__button button button--transparent">заказать</a>
+                   <a  class="hero__button button call-button button--transparent">заказать</a>
                </div>
             </div>
         </div>
@@ -740,7 +740,7 @@
                                     в подарок
                                 </li>
                             </ul>
-                            <a href="#" class="button button--blue wanna-buy-item__button">купить</a>
+                            <a  class="button call-button button--blue wanna-buy-item__button">купить</a>
                         </div>
                     </div>
                     <div class="wanna-buy__item-container">
@@ -765,7 +765,7 @@
                                     Мин. срок аренды 3 месяца
                                 </li>
                             </ul>
-                            <a href="#" class="button button--blue wanna-buy-item__button">купить</a>
+                            <a  class="button call-button button--blue wanna-buy-item__button">купить</a>
                         </div>
                     </div>
                     <div class="wanna-buy__item-container">
@@ -1014,22 +1014,23 @@
             </div>
             <input type="text" name="phone" class="input modal-content__input numbox" placeholder="Телефон">
             <input type="text" name="name" class="input modal-content__input" placeholder="Ваше имя">
-            <button class="modal-content__button button button--red button--no-radius">
+            <button class="modal-content__button button button--blue button--no-radius">
                 Отправить
             </button>
            </form>
        </div>
-       <div class="b-modal" id="selection-modal">
+       <div class="b-modal" id="thanks">
         <div class="b-modal_close arcticmodal-close"></div>
         <form class="modal-content">
          <div class="modal-content__title">
-            Заполните форму для расчета 
-            точной стоимости
+          Спасибо за заявку!
          </div>
+         <p>
+             Наши менеджеры свяжутся с вами в ближайшее время
+         </p>
          <input type="text" name="phone" class="input modal-content__input numbox" placeholder="Телефон">
          <input type="text" name="name" class="input modal-content__input" placeholder="Ваше имя">
-         <textarea class="modal-content__textarea" placeholder="Введите сообщение"></textarea>
-         <button class="modal-content__button button button--red button--no-radius">
+         <button class="modal-content__button button button--blue button--no-radius">
              Отправить
          </button>
         </form>
